Table students {
  student_id integer [pk, increment]
  name text [not null, unique]
  created_at text [not null, default: `datetime('now')`]
}

Table sessions {
  session_id text [pk, note: "UUID"]
  student_name text [not null, ref: > students.name]
  standard_code text [not null]
  standard_name text [not null]
  target_count integer [not null]
  problems_attempted integer [not null, default: 0]
  problems_correct integer [not null, default: 0]
  problems_skipped integer [not null, default: 0]
  accuracy_pct real [not null, default: 0.0]
  duration_seconds integer [not null, default: 0]
  started_at text [not null]
  completed_at text
}

Table problem_results {
  result_id integer [pk, increment]
  session_id text [not null, ref: > sessions.session_id]
  standard_code text [not null]
  problem_text text [not null]
  expected_answer text [not null]
  student_answer text
  is_correct integer [not null, default: 0, note: "0/1"]
  attempts integer [not null, default: 1]
  skipped integer [not null, default: 0, note: "0/1"]
  time_taken_seconds integer
  created_at text [not null, default: `datetime('now')`]
}
